--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@
 
 /* cite */
 
-#cite > section { height:auto; }
+#cite > section { height:auto; border-radius:10px 0px 10px 0px; }
 
 /* previews */
 
@@ -467,9 +467,9 @@
     justify-self: flex-start;
 }
 
-#complementary > article > ul {}
 
 
+#complements > article > ul ,
 #complementary > article > ul { list-style:none; }
 
 #complementary > article > ul > li > a { text-decoration: none; }
@@ -693,6 +693,10 @@
 
 .razons > article:first-of-type { margin-top:-40px;}
 
+
+
+
+
 #razons > section:first-of-type { display:flex; }
 
 #razons > section 
@@ -707,6 +711,7 @@
     justify-content: center;
     margin-top:80px; 
 }
+
 
 .razons  > article { padding-top:10px; }
                     
@@ -866,17 +871,19 @@ footer > section > article > button { width:100% !important;color:#FFFFFF; }
     width:100%;
 }
 
-/* mockups */
+
+/* mockups videos */
+
+#mockups { padding:35% 0px; }
 
 #bx-mockup 
 {
-    margin-top:-25px;
     width:100%;
     height:100vh;
+    padding:80px 0px;
     display: flex;
     justify-content: center;
     position: relative;
-
 }
 
 #bx-mockups-deslice
