--- a/css/think-grid.css
+++ b/css/think-grid.css
@@ -9,7 +9,7 @@
 /* inner padding */
 
 .gral-padding { padding:10% 0px; }
-
+.section-btn > a { text-decoration: none; }
 /* BORDES */
 
 .b { border:1px solid rgba(0,0,0,.9); }
@@ -119,6 +119,59 @@
 .px-3 { padding:0px 30px; }
 .px-4 { padding:0px 40px; }
 .px-5 { padding:0px 50px; }
+
+/* margins */
+
+.m-0 { margin:0px; }
+.m-1 { margin:10px; }
+.m-2 { margin:20px; }
+.m-3 { margin:30px; }
+.m-4 { margin:40px; }
+.m-5 { margin:50px; }
+.m-6 { margin:60px; }
+.m-7 { margin:70px; }
+
+.ml-0 { margin-left:0px; }
+.ml-1 { margin-left:10px; }
+.ml-2 { margin-left:20px; }
+.ml-3 { margin-left:30px; }
+.ml-4 { margin-left:40px; }
+.ml-5 { margin-left:50px; }
+
+.mr-0 { margin-right:0px; }
+.mr-1 { margin-right:10px; }
+.mr-2 { margin-right:20px; }
+.mr-3 { margin-right:30px; }
+.mr-4 { margin-right:40px; }
+.mr-5 { margin-right:50px; }
+
+.mb-0 { margin-bottom:0px; }
+.mb-1 { margin-bottom:10px; }
+.mb-2 { margin-bottom:20px; }
+.mb-3 { margin-bottom:30px; }
+.mb-4 { margin-bottom:40px; }
+.mb-5 { margin-bottom:50px; }
+
+.mt-0 { margin-top:0px; }
+.mt-1 { margin-top:10px; }
+.mt-2 { margin-top:20px; }
+.mt-3 { margin-top:30px; }
+.mt-4 { margin-top:40px; }
+.mt-5 { margin-top:50px; }
+
+.my-0 { margin:0px; }
+.my-1 { margin:10px 0px; }
+.my-2 { margin:20px 0px; }
+.my-3 { margin:30px 0px; }
+.my-4 { margin:40px 0px; }
+.my-5 { margin:50px 0px; }
+
+.mx-0 { margin:0px; }
+.mx-1 { margin:0px 10px; }
+.mx-2 { margin:0px 20px; }
+.mx-3 { margin:0px 30px; }
+.mx-4 { margin:0px 40px; }
+.mx-5 { margin:0px 50px; }
 
 /* centrado */
 
