--- a/css/think-grid.css
+++ b/css/think-grid.css
@@ -10,6 +10,7 @@
 
 .gral-padding { padding:10% 0px; }
 .section-btn > a { text-decoration: none; }
+.un-list { list-style: none; }
 /* BORDES */
 
 .b { border:1px solid rgba(0,0,0,.9); }
