--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,8 +1,8 @@
 /* all */
 
-@media screen and ( max-width: 1920px )
+@media screen and ( max-height: 1080px )
 {
-
+    
 }
 
 
@@ -277,6 +277,8 @@
 
 @media screen and ( max-width: 600px )
 {
+
+    #complements { padding:50px 0px; }
 
     #complements > #btns-complementary { display:none; }
 
