--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,14 +9,6 @@
 @media screen and ( max-width: 1728px )
 {
 
-    /* slide */
-
-    .img-slide
-    {
-        width:1728px;
-        height:1000px;
-    }
-
     /* infinite-slide */
 
     #infinite-slide 
@@ -71,9 +63,6 @@
 
 @media screen and ( max-width: 1440px ) 
 {
-    /* slide */
-
-    .img-slide { width:1440px; height:900px; }
 
     /* mockups videos */
 
@@ -99,6 +88,7 @@
 /* slide */
 
 
+
 @media screen and ( max-width: 1440px ) 
 {
     #slide > section > article 
@@ -107,12 +97,12 @@
         min-width:680px; 
     }
 
-    .img-slide 
-    { 
-        width:100%;
-        height:100vh;
-        min-width:1440px;
-    }   
+    .img-slide { width:1600px !important; }
+}
+
+@media screen and ( max-width: 1440px ) 
+{
+    .img-slide { width:1440px !important; }
 }
 
 @media screen and ( max-width: 1200px )
@@ -155,8 +145,8 @@
     { 
         float:left;
         min-width:0px;
-        margin-left:-400px;
-        height:80vh;
+        width:1100px !important;
+        height:90vh !important;
     }
 
     #slide > section > article { width:100%;padding:4%;}
@@ -175,13 +165,17 @@
     #slide { height:100vh; } 
 }
 
-@media screen and ( max-width: 420px )
+@media screen and ( max-width: 600px )
+{
+    .img-slide { width:1100px !important; height:80vh !important; }
+}
+
+@media screen and ( max-width: 450px )
 {
     .img-slide 
     { 
         width:800px;
-        height:450px;
-        margin-left:-85%; 
+        margin-left:-120%; 
     }
 
     #slide > section > article { padding:5px;}
@@ -190,9 +184,13 @@
     #slide { height:100vh; } 
 }
 
-@media screen and ( max-width: 350px )
+@media screen and ( max-width: 380px )
 {
-    .img-slide { margin-left:-100%; }
+    .img-slide 
+    { 
+        width:1000px !important; 
+        height:70vh !important; 
+        margin-left:-130% !important; }
 }
 
 /* infinite-slide */
@@ -218,7 +216,7 @@
 
     .img-radius-integrations { width:180px;height:180px; }
 
-    #bx-slide-infinite { width:1250px;height:35vh; }
+    .bx-slide-infinite { width:1250px;height:35vh; }
 }
 
 /* complementary */
