--- a/css/responsive.css
+++ b/css/responsive.css
@@ -72,20 +72,11 @@
 
 /* slide */
 
-
-
 @media screen and ( max-width: 1440px ) 
 {
-    #slide > section > article 
-    { 
-        width:60%;
-        min-width:680px; 
-    }
-}
+    #slide > section > article { width:60%; min-width:680px; }
 
-@media screen and ( max-width: 1440px ) 
-{
-    .img-slide { width:1440px !important; }
+    .img-slide { width:90%; }
 }
 
 @media screen and ( max-width: 1200px )
@@ -225,6 +216,11 @@
     .badge-integrations { display:block; margin:auto; height:auto; margin-top:10px;}
 }
 
+@media screen and ( max-width: 770px )
+{
+    .bx-slide-infinite { height:30vh; }
+}
+
 @media screen and ( max-width: 600px )
 {
     #infinite-slide { height:90vh; padding:100px 0px; }
@@ -262,20 +258,27 @@
     #complements { height:auto;padding:150px 0px; }
 }
 
-@media screen and ( max-width: 800px )
+@media screen and ( max-width: 820px )
 {
     #bx-displace-complementary > li { padding:20px; }
 
     #complementary > article { width:90%; }
 }
 
-@media screen and ( max-width: 700px )
+@media screen and ( max-width: 750px )
 {
+    #complementary > article { width:100%; }
     #complements > article > ul > li { width:90%; }
 }
 
 @media screen and ( max-width: 600px )
 {
+
+    #complementary > article { width:60%;padding:0px; }
+
+    .box-imgs-complements { width:80%;}
+
+    #bx-displace-complementary { padding:0px; }
 
     #complements { padding:50px 0px; }
 
@@ -290,7 +293,10 @@
     .box-thinks-products > h1 { font-size:35px;}
 
 
-    #btns-complementary > .btn-slide-apps { margin:80px 5px; }
+    #complementary > article > #bx-displace-complementary > li:first-of-type { display:none; }
+
+    #btns-complementary > .btn-slide-apps { margin:0px 5px; }
+
 
     #btns-complementary > .btn-slide-apps > img { margin:auto; }
 
@@ -308,7 +314,35 @@
     #complementary > article > ul > li { width:25%; }
 
     #btns-complementary { display:flex; } 
+
+    #complementary > article > #bx-displace-complementary > li > article:last-child 
+    { 
+        width:80%;
+        text-align: justify; 
+    }
 }
+
+@media screen and ( max-width: 500px ) 
+{
+    
+    #complementary > article { width:80%; }
+}
+
+@media screen and ( max-width: 450px ) 
+{
+    #btns-complementary { margin-top:100px; height:0px;}
+
+    #btns-complementary > .btn-slide-apps { margin:0px 5px; }
+
+    .box-thinks-products,
+    .img-prouct { width:150px; height:150px; }
+
+    .box-imgs-complements { height:200px; }
+
+    .box-thinks-products > .f-2 { font-size:24px; line-height:24px; }
+}
+
+
 
 
 /* apps */
