--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 /* infinite-slide */
 
-#infinite-slide { height:85vh; }    
+#infinite-slide 
+{ 
+    height:85vh;
+}    
 
 #infinite-slide > header 
 { 
@@ -8,7 +11,10 @@
     margin:auto;
 }
 
-#bx-content-animation { display: flex; }
+#bx-content-animation 
+{ 
+    display: flex;
+}
 
 .bx-slide-infinite 
 {
@@ -17,7 +23,9 @@
     display:flex;
     justify-content: space-around;
     align-items: center;
-    animation:slideshow 8s linear infinite;
+    -webkit-animation:slideshow 8s linear infinite;
+    -moz-animation:slideshow 8s linear infinite;
+    -o-animation:slideshow 8s linear infinite;
 }
 
 .img-radius-integrations 
@@ -38,7 +46,6 @@
     height:39px;
     padding:8px 25px;
     border-radius:5px;
-    font-family: 'think-light';
     font-size:22px;
 }
 
@@ -98,8 +105,8 @@
 }
 
 .img-slide { 
-    width:100% !important;
-    height:100vh !important;
+    width:100%;
+    height:100vh;
 }
 
 #gradient {
@@ -138,7 +145,6 @@
     align-items:flex-start; 
     flex-direction: column; 
 }
-
 
 /* customers */
 
@@ -485,7 +491,6 @@
 
 .box-imgs-complements:hover > section > .box-thinks-products 
 {
-    opacity:.4;
     z-index:1;
 }
 
@@ -729,7 +734,12 @@
 
 /* razons */
 
-.img-razons { width:220.68px; }
+.img-razons 
+{ 
+    display:flex;
+    margin:auto;
+    width:220.68px; 
+}
 
 #razons 
 {
