--- a/css/responsive.css
+++ b/css/responsive.css
@@ -351,6 +351,9 @@
 
 @media screen and ( max-width: 450px ) 
 {
+    #btns-complementary > button { width:50px;height:50px; }
+    #btns-complementary > button > img { width:18px;height:18px; }
+
     #btns-complementary { margin-top:100px; height:0px;}
 
     #btns-complementary > .btn-slide-apps { margin:0px 5px; }
@@ -735,7 +738,7 @@
 @media screen and ( max-width:600px ) 
 {
 
-   .razons > article > ul > li { font-size:12px; }
+   .razons > article > ul > li { font-size:16px; }
 
     #razons > section > article:nth-child(1) 
     { 
@@ -781,7 +784,7 @@
     .razons > article > p ,
     .razons > article > h4,
     .razons > article > h6, 
-    .razons > article > ul { text-align: center; list-style: none; }
+    .razons > article > ul { list-style: none; }
     .razons > article > ul > li { padding:5px 0px; }
 
     .razons > article:nth-child(1) > div:first-of-type > h4 { line-height:18px; }
@@ -791,11 +794,7 @@
     .razons > article { padding:0px 0px; }
 }
 
-@media screen and ( max-width:450px ) 
-{
-    #btns-complementary > button { width:50px;height:50px; }
-    #btns-complementary > button > img { width:18px;height:18px; }
-}
+
 
 
 
