--- a/css/think-grid.css
+++ b/css/think-grid.css
@@ -8,7 +8,7 @@
 
 /* inner padding */
 
-.gral-padding { padding:10% 0px; }
+.gral-padding { padding:150px 0px; }
 .section-btn > a { text-decoration: none; }
 .un-list { list-style: none; }
 /* BORDES */
