--- a/css/style.css
+++ b/css/style.css
@@ -1,73 +1,15 @@
-/* infinite-slide */
+/* btns */
 
-#infinite-slide 
-{ 
-    height:85vh;
-}    
-
-#infinite-slide > header 
-{ 
-    display:flex;
-    margin:auto;
-}
-
-#infinite-slide > header > h2
+.btn-yellow 
 {
-    display:inline-block;
-    text-align: center;
-    position: relative;
+    width:230px;
+    height:60px;
+    border:none;
+    font-family: 'think-bold';
+    font-size:18px;
+    background-color:#D5F901;
+    cursor:pointer;
 }
-.badge-integrations 
-{
-    display:inline-block !important;
-    position: absolute;
-
-    padding:10px;
-    bottom:8px;
-    width:263px;
-    height:39px;
-    padding:8px 25px;
-    border-radius:5px;
-}
-
-#bx-content-animation { display: flex; }
-
-.bx-slide-infinite 
-{
-    min-width:1920px;
-    height:50vh;
-    display:flex;
-    justify-content: space-around;
-    align-items: center;
-    -webkit-animation:slideshow 8s linear infinite;
-    -moz-animation:slideshow 8s linear infinite;
-    -o-animation:slideshow 8s linear infinite;
-}
-
-.img-radius-integrations 
-{ 
-    width:210px;
-    height:210px;
-}
-
-@keyframes slideshow 
-{
-    0% { transform: translate(0); }
-    100% { transform: translate(-100%); }
-} 
-
-.badge-integrations 
-{
-    /* display:absolute; */
-    display: flex;
-    flex-wrap: wrap;
-    width:263px;
-    height:39px;
-    padding:8px 25px;
-    border-radius:5px;
-    font-size:22px;
-}
-
 
 /* btns */
 
@@ -114,40 +56,6 @@
 .boxis { transition:.4s; }
 
 
-/* slide */
-
-#slide {
-
-    height:100vh; 
-    overflow:hidden;
-    position:relative;
-}
-
-.img-slide { 
-    width:100%;
-    height:100vh;
-}
-
-#gradient {
-    height:100vh;
-    width:100%;
-    position: absolute;
-    z-index:2;
-    background: rgb(0,0,0);
-    background: linear-gradient(90deg, rgba(0,0,0,1) 9%, rgba(2,0,36,0) 77%);
-}
-
-#slide > section {
-    position: absolute;
-    z-index:20;
-    bottom:5%;
-    left:5%;
-}
-
-#slide > section > article { 
-    position: relative; 
-    z-index:10; 
-}
 
 
 /* gadgets */
@@ -185,118 +93,6 @@
     color:#FFFFFF;
 }
 
-/* integrations */
-
-#integrations > section 
-{
-    display:flex;
-    justify-content: space-between;
-}
-
-#integrations > section > article:first-of-type > a > button
-{
-    width:252px;
-    height:60px;
-    font-size:18px;
-}
-
-#integrations > section > article:first-of-type { min-width:450px; }
-#integrations > section > article:last-child { min-width:550px; }
-
-.integrations,.circle { position:absolute; }
-.integrations:nth-child(1) { top:190px; } /* mp */
-.integrations:nth-child(2) { right:20px; bottom:120px; } /* uber */
-.integrations:nth-child(3) { right:20px; top:110px; } /* Pedidos ya */
-.integrations:nth-child(4) { bottom:45px; left:150px; } /* rapi */
-
-.circle { border-radius:50%; }
-
-.c-yellow {
-    width:95px;
-    height:95px; 
-    top:15%;
-    left:30%;
-}
-.lila 
-{ 
-    width:39px;
-    height:39px; 
-    background-color:#7A42EB;
-    bottom:270px;
-    right:20px;
-}
-
-.green 
-{
-    width:65px;
-    height:65px;
-    background-color:#00E6C9;
-    bottom:155px;
-    left:80px;
-}
-
-/* novelties */
-
-#novelties > section 
-{
-    min-height:400px;
-    display:flex;
-    justify-content: center;
-    align-items: center;  
-} 
-
-#novelties > section > article:first-of-type 
-{
-    position:relative;
-    z-index:3;
-}
-
-#novelties > section > article:first-of-type { min-width:680px;}
-
-#novelties > section > article:first-of-type > div > .f-1 { padding-bottom:0px; }
-
-#novelties > section > article:first-of-type > div > .f-1,
-#novelties > section > article:first-of-type > div > .f-5 { padding-left:60px; }
-
-.vector-Think {
-    left:-20px;
-    top:80px;
-    width:78px;
-}
-
-.more-shadow 
-{
-    position:absolute;
-    z-index:1;
-    left:0px;
-    top:35px;
-    width:138px;
-}
-
-/* form */
-
-#bx-subscribe
-{
-    width:100%;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#bx-subscribe > input 
-{
-    width:300px;
-    height:60px;
-    background-color:transparent;
-    border:1px solid white;
-    padding-left:25px;
-}
-
-#bx-subscribe > button 
-{
-    width:155px;
-    height:60px;
-}
 
 /* together */
 
@@ -319,177 +115,8 @@
 
 #cite > section { height:auto; border-radius:10px 0px 10px 0px; }
 
-/* previews */
-
-#previews { width:100%; }
-
-.slide-previews { width:1728px; height:120vh; }
-
-#bx-btns-previews > button > img { display:block; margin: auto; }
 
 
-.slide-previews { display:none; } 
-.slide-previews:first-of-type { display:flex; }
-
-#previews > section > button { background-color:rgba(255,255,255,.6); }
-#previews > section > button:active { background-color: #7A42EB; } 
-
-#bx-btns-previews
-{
-    display: flex;
-    margin:auto;
-    top:0px;
-    bottom:0px;
-    position: absolute;
-    width:100%;
-    height:60px;
-    z-index:50;
-    justify-content: space-between;
-}
-
-.card-think-about
-{
-    padding:35px 50px;
-    width:544px;
-    line-height: 30px;
-    bottom:-200px;
-    left:10%;
-    position:absolute;
-    display: none;
-}
-
-.card-think-about:first-of-type { display:flex; }
-
-.card-think-about > p > a,
-.card-think-about > p > span 
-{
-    text-align: left;
-    display:block; 
-    text-decoration: none; 
-    margin-top:10px;
-}
-
-#bx-arrows-thinks-reviews 
-{
-    position:absolute;
-    top:15px;
-    left:0px;
-    width:100px;
-    height:100px;
-}
-
-#bx-arrows-thinks-reviews > img { position:absolute; }
-
-#bx-arrows-thinks-reviews > img:first-of-type 
-{
-    width:40px;
-    left:-10px;
-    top:15px;
-    z-index:5;
-}
-
-#bx-arrows-thinks-reviews > img:last-child
-{
-    width:72px;
-    left:-18px;
-    top:-7px;
-    z-index:50;
-}
-
-#bx-btns-previews { z-index:10; }
-.card-think-about { z-index:5; }
-
-/* hero-1 */
-
-#hero-1 > section,
-#hero-2 > section 
-{
-    height:50vh;
-    width:100%;
-    display:flex;
-    justify-content: center;
-}
-
-.rectangle 
-{
-    width:200px;
-    height:50vh;
-    z-index:1;
-    position:absolute;   
-}
-
-#hero-1 > section > section:last-child,
-#hero-2 > section:last-child > section { justify-content:space-between; } 
-
-#hero-1 > section:last-child > section > section:first-child > button,
-#hero-2 > section:last-child > section > section:last-child > button 
-{
-    width:252px;
-    height:60px; 
-    margin-top:50px; 
-}
-
-#hero-1 > section > .rectangle { right:0px; }
-#hero-2 > section > .rectangle { left:0px; }
-
-
-
-/* cajas de texo */
-#hero-1 > section > section > section:first-child,
-#hero-2 > section > section > section:last-child { position: relative; z-index:5; }
-
-/* alineacion para la primer caja principal */
-#hero-1 > section:first-child,
-#hero-2 > section:first-child { align-items: flex-end; }
-
-/* alineacion para la ultima caja principal */
-#hero-1 > section:last-child,
-#hero-2 > section:last-child { align-items: flex-start; }
-
-#hero-1 > section:last-child > section > section:last-child,
-#hero-2 > section:last-child > section > section:first-child
-{
-    display:flex;
-    justify-content: center; 
-}
-
-#hero-2  > section:first-of-type > section 
-{
-    display: flex;
-    justify-content: space-between;
-}
-
-.mockup 
-{
-    border-radius:50px;
-    width:267px;
-    height:475px;
-    overflow:hidden;
-    box-shadow:0px 0px 35px rgba(0,0,0,.7);
-}
-
-.inner-mockup 
-{
-    width:238px;
-    height:445px;
-    background-color:#FFFFFF;
-    margin:15px;
-    border-radius:36px;
-    position: absolute;
-    overflow: hidden;
-}
-
-.mockup-image { width:247px; height:455px; }
-
-#mockup-01,
-#mockup-02
-{
-    position:absolute;
-    z-index:5;
-}
-
-#mockup-01,
-#mockup-02 { bottom:200px; }
 
 
 
@@ -846,7 +473,9 @@
 .list 
 {
     width:10px;
+    min-width:10px;
     height:10px;
+    min-height:10px;
     border-radius:50%;
     margin:5px 10px 0px 0px;
     background-color:#7A42EB;
@@ -1019,7 +648,7 @@ footer > section > article > button { width:100% !important;color:#FFFFFF; }
     display:flex;
     position:absolute;
     align-self:center;
-    z-index:10;
+    z-index:60;
 }
 
 .bx-btn-play 
