--- a/css/components/previews.css
+++ b/css/components/previews.css
@@ -1,12 +1,12 @@
 /* previews */
 
-#previews { width:100%;height:100vh; position: relative;}
+#previews { width:100%;height:100vh; border:1px solid red; position: relative;}
 
 /* btns */
 #bx-btns-previews > button > img { display:block; margin: auto; }
 
 /* imgs */
-.slide-previews { width:100%; height:1080px; }
+.slide-previews { width:100%; height:100vh; }
 
 .card-think-about
 {
@@ -14,7 +14,7 @@
     width:544px;
     height:auto;
     line-height: 30px;
-    bottom:-50px;
+    bottom:0px;
     left:5%;
     position:absolute;
     display: none;
