Actualizacion de contenido de productos y subida de imagenes

--- a/css/colours.css
+++ b/css/colours.css
@@ -4,6 +4,7 @@
 .bg-think { background-color:#7A42EB; }
 .bg-think-yellow { background-color:#D5F901;}
 .bg-think-blue { background-color:#00B8FF; }
+.bg-think-green { background-color:#00E6C9; }
 .bg-think-black { background-color:#000000; }
 .bg-think-dark { background-color:#191919; }
 .bg-think-white { background-color:#FFFFFF; }
