--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -1,66 +1,155 @@
 
-/* footer */
-
-/* footer 
-{ 
-    width:100%;
+footer 
+{
     display:flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding:3% 0px;
+    width:100%;
+    height:451px;
+    padding:100px 0px;
 }
 
-footer > section { flex-wrap:wrap; }
-
-.arrow-logo { margin-top:7px; }
-
-footer > section:first-child { margin-bottom:50px; }
-
-footer > section > article:nth-child(2) > div > ul { list-style: none; }
-footer > section > article:nth-child(2) > div > p > span { font-family:'think-light';color:#898989; }
-.footer-links
-{ 
-    font-family:'think-light';
-    padding:3px 0px; 
-    font-size:.9rem;
-    display: flex;
-    justify-content: flex-start;
-
-}
-
-.footer-links > div > a { color:#FFFFFF; text-decoration:none; }
-
-footer > section > article > h6 { font-family:'think-light';color:#898989; }
-footer > section > article > h6 > span { font-weight:bold; }
-
-footer > section > article:nth-child(3) > ul > li > a { color:#FFFFFF;text-decoration:none; }
-footer > section > article:nth-child(3) > ul > li 
+.container-footer
 {
-    list-style:none;
-    padding:5px 0px;
-    font-size:bold; 
+    width:90%;
+    display:flex;
+    justify-content: center;
 }
 
-footer > section > article:nth-child(4) > p { color:#898989; font-family:'think-light'; }
-footer > section > article:nth-child(4) > small { color:#898989; }
-
-footer > section > article > button { width:100% !important;color:#FFFFFF; }
-
-
-#footer-legal 
+.footer-btn 
 {
-    display: flex;
-    justify-content: space-between;
-}
-
-.s-network-social
-{
-    border-radius:50%;
-    padding:5px;
-    margin:0px 5px;
+    width:256px;
+    height:60px;
+    font-size:18px;
+    color:#FFFFFF;
+    border:none;
+    font-family: 'think-bold';
     cursor:pointer;
     transition:.4s;
 }
 
-.s-network-social:hover { background-color:#7A42EB; } */
+.footer-btn:hover 
+{
+    background-color:#D5F901;
+    color:#000000;
+}
+
+.links-footer
+{
+    display:flex;
+    flex-direction: column;
+    list-style:none;
+    align-items: center;
+    line-height:33px;
+}
+
+.links-footer > li > a 
+{
+    color:#FFFFFF;
+    font-family: 'think-bold';
+    text-decoration: none;
+    transition:.2s;
+}
+
+.links-footer > li > a:hover 
+{ 
+    color:#7A42EB;
+    text-decoration: underline;
+}
+
+.list-msg-footer { list-style: none; }
+
+.list-msg-footer > li > a 
+{
+    color:#FFFFFF;
+    font-family: 'think-bold';
+    text-decoration: none;
+    transition:.2s;
+    line-height: 30px;
+    font-size: 16px;
+}
+
+.list-msg-footer > li > a:hover 
+{
+    color:#7A42EB;
+    text-decoration: underline;
+} 
+
+.legal-footer 
+{
+    margin-top:60px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.legal-footer > article:last-child 
+{
+    display:flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+#goToFooter 
+{
+    position: absolute;
+    right:-50px;
+    cursor: pointer;
+}
+
+@media screen and ( max-width:1300px ) 
+{
+    .container-footer > article:nth-child(1) { width:100%; }
+    .container-footer > article:nth-child(2) { width:50%;  }
+    .container-footer > article:nth-child(3) { width:25%; }
+    .container-footer > article:nth-child(4) { width:25%;  }
+}
+
+@media screen and ( max-width:1300px ) 
+{
+    footer { height:auto; }
+    .container-footer > article:nth-child(2) { width:100%;  }
+    .container-footer > article:nth-child(3) { width:50%; }
+    .container-footer > article:nth-child(4) { width:50%;  }
+
+    .legal-footer 
+    {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width:100%;
+    }
+
+    .legal-footer > article { width:90%; text-align: center; }
+
+    .legal-footer > article > span { line-height: 30px; }
+
+    .legal-footer > article:last-child { justify-content: center; }
+
+    #goToFooter { right:50px; }
+}
+
+@media screen and ( max-width:800px ) 
+{
+    .legal-footer > article:last-child { width:100%; }
+}
+
+
+@media screen and ( max-width:450px ) 
+{
+    .container-footer > article:nth-child(2) > section 
+    { 
+        display:flex; 
+        align-items: center; 
+        flex-direction: column;  
+    }
+
+    #goToFooter { right:0px; }
+
+    .container-footer > article:nth-child(2) > article { text-align: center; line-height: 18px;}
+    .container-footer > article:nth-child(2) > section > ul { width:70%;}
+
+    .container-footer > article:nth-child(3) { width:100%; }
+    .container-footer > article:nth-child(4) { width:100%;  }
+
+    .links-footer
+    { display:block; margin:auto; }
+}
