--- a/css/components/heros.css
+++ b/css/components/heros.css
@@ -51,6 +51,8 @@
     font-size:18px;
     font-family: 'think-bold';
     border:none;
+    transition:.3s;
+    cursor: pointer;
 }
 
 .mockup-think,
