--- a/css/components/preview.css
+++ b/css/components/preview.css
@@ -2,7 +2,6 @@
 {
     width:100%;
     height:100vh;
-    margin:100px 0px;
 }
 
 .slide-previews 
@@ -160,9 +159,14 @@
     .slide-previews { height:35vh; }
 }
 
+@media screen and ( max-width:376px)
+{
+    #preview { height:auto; }
+}
+
 @media screen and ( max-width:361px )
 {
-    #preview { height:80vh; }
+    #preview { height:auto; }
     #bx-previews { height:35vh; }
     .slide-previews { height:35vh; }
 }
