--- a/css/components/slide.css
+++ b/css/components/slide.css
@@ -7,10 +7,8 @@
     position:relative;
 }
 
-.img-slide { 
-    width:100%;
-    height:100vh;
-}
+.img-slide { width:100%; height:100vh; }
+.img-slide-app-shell { width:100%; height:100vh; }
 
 #gradient {
     height:100vh;
@@ -108,6 +106,8 @@
 {
     #slide { height:100vh; }
 
+    .img-slide-app-shell { width:200%; height:auto; margin-left:-150px; }
+
     #gradient {
         background: rgb(0,0,0);
         background: linear-gradient(0deg, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 80%);
@@ -132,6 +132,8 @@
         width:1100px !important;
         height:80vh !important;
     }
+
+    .img-slide-app-shell { width:200%; height:auto; margin-left:-120px; }
 
     #slide > section > article { width:100%;padding:4%;}
 
@@ -158,6 +160,8 @@
         height:80vh !important;
         margin-left:-120%; 
     }
+
+    .img-slide-app-shell { width:300%; height:auto; margin-left:-150px; }
 
     #slide > section > article { padding:5px;}
 
