--- a/css/components/infinite-slide.css
+++ b/css/components/infinite-slide.css
@@ -35,6 +35,7 @@
     min-width:1920px;
     height:auto;
     padding:5% 0px;
+    float:left;
     display:flex;
     justify-content: space-around;
     align-items: center;
@@ -50,11 +51,11 @@
 
 }
 
-@keyframes slideshow 
+/* @keyframes slideshow 
 {
     0% { transform: translate(0); }
     100% { transform: translate(-100%); }
-} 
+}  */
 
 .badge-integrations 
 {
